# hackathon

./: README.md
C1_DataReuse/backend/: README.md  app.py  openapi.yaml  pyproject.toml
C1_DataReuse/backend/api/: bathw.py  datasets.py  landcs.py  regioni.py
C1_DataReuse/frontend/: README.md  index.html  package.json
C1_DataReuse/frontend/src/: App.vue  main.ts
C1_DataReuse/frontend/src/components/: BathwMap.vue  DatasetsForm.vue  LandcsMap.vue  Navbar.vue
C1_DataReuse/frontend/src/router/: index.ts
C1_DataReuse/frontend/src/types/: Bathw.ts  Dataset.ts  Landcs.ts  Regione.ts
C1_DataReuse/frontend/src/views/: BathwView.vue  LandcsView.vue
C2_data reuse/: README.md
C3_Multilingualism_MR/: get_labels.sparql  get_name.sparql  test.py  translate.py
