[tool.poetry]
name = "ispra-back"
version = "0.1.1"
description = ""
authors = ["Luca Bassi <luca@argoware.com>", "Simone Persiani <simone.persiani@bupsolutions.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
SPARQLWrapper = "^2.0.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
